--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='/stylesheets/main.css'/>
+    <link rel='stylesheet' href='/stylesheets/style.css'/>
     <title>In The Loop</title>
 </head>
 <body>
     <nav>
         <a href="/">Home</a>
+        <a href="/">Live Feed</a>
+        <% if (user) { %>
+          <a href="/project/new" <%- title === 'Add Movie' ? 'class="active"' : '' %>>Add Project</a>
+          <a href="/logout">LOG OUT</a>
+        <% } else { %>
+          <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+        <% } %>
     </nav>
