--- a/views/projects/live-feed.ejs
+++ b/views/projects/live-feed.ejs
@@ -1,5 +1,9 @@
 <%- include('../partials/header') %>
-
-LIVE FEED
-
+<br>
+<br>
+<br>
+<p class="live-feed">THIS PAGE WILL SHOW MY LIVE FEED</p>
+<br>
+<br>
+<br>
 <%- include('../partials/footer') %>
