--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,47 +13,30 @@ body {
 
 /* ------- BANNER SECTION ------- */
 
-/* #banner {
+#banner {
   background-color: lightblue;
   width: 100%;
-  height: 10rem;
+  height: 11rem;
   display: flex;
-  /* justify-content: center; */
-  /*align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
-#banner > img {
+#banner > a > img {
   height: 10rem;
-} */
+}
 
 /* ------- NAVIGATION SECTION ------- */
 
 nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   border: 1px solid black;
-  padding-right: 15rem;
   color: #bb70e6;
+  background-color: aliceblue;
   font-size: 2rem;
-  height: 9rem;
-}
-
-#banner-image > a > img {
-  align-self: center;
-  height: 8rem;
-  top: 0;
-  position: absolute;
-}
-
-#banner-picture {
-  margin-left: 2rem;
-  z-index: -10;
-}
-
-#banner-image {
-  display: flex;
-  align-items: center;
+  height: 6rem;
 }
 
 /* NOT LOGGED IN SELECTORS */
