--- a/views/projects/my-projects.ejs
+++ b/views/projects/my-projects.ejs
@@ -2,7 +2,7 @@
 
 <div id="my-project-header">
     <h1>My Projects</h1>
-    <a href="/projects/my/new">Add New Project</a>
+    <a href="/projects/my/new"><button>Add New Project</button></a>
 </div>
 
 <div id="my-project-container">
@@ -11,19 +11,18 @@
 
         <div id="my-project-tile">
             <h5><%= p.title %></h5>
-            <p>Creator: <%= user.name %></p>
+            <p><b><i>Creator:</i></b> <%= user.name %></p>
             <img src="<%= p.image %>">
-            <p>Start Date: <%= p.startDate.toLocaleString('en-US', { dateStyle: 'full' }) %></p>
-            <p>Difficulty: <%= p.difficulty %></p>
-            <p>Description: <%= p.description %></p>
-            <p>Complete: <%= p.complete ? 'Yes' : 'No' %></p>
+            <p><b><i>Start Date:</i></b> <%= p.startDate.toLocaleString('en-US', { dateStyle: 'full' }) %></p>
+            <p><b><i>Difficulty:</i></b> <%= p.difficulty %></p>
+            <p><b><i>Description:</i></b> <%= p.description %></p>
+            <p><b><i>Complete:</i></b> <%= p.complete ? 'Yes' : 'No' %></p>
         </div>
 
     <% }) %>
 
 <% } else { %>
-    <h5>You have not added any projects.</h5>
-    <a href="/projects/my/new"><button>Add New Project</button></a>
+    <p id="no-projects">You do not have any projects - add one above!</p>
 <% } %>
 </div>
 
