--- a/views/projects/live-feed.ejs
+++ b/views/projects/live-feed.ejs
@@ -5,13 +5,22 @@
     <% projects.forEach(function(p) { %>
 
         <div id="live-feed-tile">
-            <h5><%= p.title %></h5>
-            <p><b><i>Creator:</i></b> <%= p.creator.name %></p>
-            <img src="<%= p.image %>">
-            <p><b><i>Start Date:</i></b> <%= p.startDate.toLocaleString('en-US', { dateStyle: 'full' }) %></p>
-            <p><b><i>Difficulty:</i></b> <%= p.difficulty %></p>
-            <p><b><i>Description:</i></b> <%= p.description %></p>
-            <p><b><i>Complete:</i></b> <%= p.complete ? 'Yes' : 'No' %></p>
+            <div class="details">
+                <h5><%= p.title %></h5>
+                <br>
+                <div class="creator">
+                    <img src="<%= p.creator.avatar %>">
+                    <p><%= p.creator.name %></p>
+                </div>
+                <br>
+                <p><b><i>Start Date:</i></b> <%= p.startDate.toLocaleString('en-US', { dateStyle: 'full' }) %></p>
+                <p><b><i>Difficulty:</i></b> <%= p.difficulty %></p>
+                <p><b><i>Description:</i></b> <%= p.description %></p>
+                <p><b><i>Complete:</i></b> <%= p.complete ? 'Yes' : 'No' %></p>
+            </div>
+            <div class="tile">
+                <img src="<%= p.image %>">
+            </div>
         </div>
         
     <% }) %>
