--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,6 +22,6 @@
         <a href="/logout">[Log Out]</a>
       </div>
     <% } else { %>
-      <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+      <a href="/auth/google" class="login">Log In&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
     <% } %>
    </nav>
