--- a/views/projects/live-feed.ejs
+++ b/views/projects/live-feed.ejs
@@ -29,7 +29,7 @@
                 <p><b><i>Start Date:</i></b> <%= p.startDate.toLocaleString('en-US', { dateStyle: 'full' }) %></p>
                 <p><b><i>Difficulty:</i></b> <%= p.difficulty %></p>
                 <p><b><i>Description:</i></b> <%= p.description %></p>
-                <p><b><i>Complete:</i></b> <%= p.complete ? 'Yes' : 'No' %></p>
+                <p><b><i>Complete:</i></b> <%= p.complete ? 'Yes' : 'In Progress' %></p>
             </div>
             <div class="tile">
                 <img src="<%= p.image %>">
