--- a/views/projects/my-projects.ejs
+++ b/views/projects/my-projects.ejs
@@ -21,7 +21,7 @@
             <p><b><i>Difficulty:</i></b> <%= p.difficulty %></p>
             <p><b><i>Description:</i></b> <%= p.description %></p>
             <p><b><i>Complete:</i></b> <%= p.complete ? 'Yes' : 'In Progress' %></p>
-            <p><b><i><a href="/projects/my/<%= p._id %>">See more</a></i></b></p>
+            <a href="/projects/<%= p._id %>"><button>See more</button></a>
         </div>
 
     <% }) %>
