--- a/views/projects/show.ejs
+++ b/views/projects/show.ejs
@@ -42,6 +42,9 @@
                     <p id="comment-author"><b><%= c.userName %></b></p>
                     <p id="comment-date"><%= c.createdAt.toLocaleDateString() %></p>
                     <p id="comment-content"><%= c.content %></p>
+                    <% if (user && c.user.equals(user._id)) { %>
+                        <form id="comment-delete-button" action="/comments/<%= c._id %>?_method=DELETE" method="POST"><input type="submit" value="Delete"></input></form>
+                    <% } %>
                 </div>
                 
             <% }); %>
