--- a/views/projects/show.ejs
+++ b/views/projects/show.ejs
@@ -27,7 +27,7 @@
     <h4>Comments</h4>
     <div id="comment">
         <% if (user) {%>
-            <form action="/projects/<%= project._id %>/comments" method="POST" id="comment-form">
+            <form action="/<%= project._id %>/comments" method="POST" id="comment-form">
                 <label>Leave comment here</label>
                 <textarea type="text" name="content" id="comment-text"></textarea>
                 <input type="submit" value="Post comment">
