--- a/views/projects/my-projects.ejs
+++ b/views/projects/my-projects.ejs
@@ -14,6 +14,8 @@
     <% projects.forEach(function(p) { %>
 
         <div id="my-project-tile" class="<%= p.complete ? 'green' : 'blue'%>">
+            <a href="#"><img src="/images/delete-icon.png" alt="trash icon" id="delete-project-button"></a>
+            <a href="#"><img src="/images/edit-icon.png" alt="edit icon" id="edit-project-button"></a>
             <h5><%= p.title %></h5>
             <p><b><i>Creator:</i></b> <%= user.name %></p>
             <img src="<%= p.image %>">
