--- a/views/projects/update.ejs
+++ b/views/projects/update.ejs
@@ -8,7 +8,7 @@
     <input type="text" name="image" value="<%= project.image %>>">
     
     <label>Start Date:</label>
-    <input type="datetime-local" name="startDate" value="<%= project.startDate %>" required>
+    <input type="datetime-local" name="startDate" value="<%= startDate %>" required>
     
     <label>Difficulty:</label>
     <select name="difficulty" required>
