--- a/views/projects/my-projects.ejs
+++ b/views/projects/my-projects.ejs
@@ -1,7 +1,8 @@
 <%- include('../partials/header') %>
 
+<h1>My Projects</h1>
+
 <div id="my-project-header">
-    <h1>My Projects</h1>
     <a href="/projects/my/new"><button>Add New Project</button></a>
     <div class="color-code">
         <div class="green"></div><p>Project is <b>Complete</b></p>
@@ -15,6 +16,7 @@
 
         <div id="my-project-tile" class="<%= p.complete ? 'green' : 'blue'%>">
             <% if (user && p.creator.equals(user._id)) { %>
+                <a id="project-see-more-button" href="/projects/<%= p._id %>"><button><img src="/images/see-more-icon.png" alt="search icon" id="see-more-project-button"></button></a>
                 <a id="project-edit-button" href="/projects/<%= p._id %>/edit"><button><img src="/images/edit-icon.png" alt="edit icon" id="edit-project-button"></button></a>
                 <form id="project-delete-button" action="/projects/<%= p._id %>?_method=DELETE" method="POST"><button type="submit"><img src="/images/delete-icon.png" alt="trash icon" id="delete-project-button"></button></form>
             <% } %>
@@ -25,7 +27,6 @@
             <p><b><i>Difficulty:</i></b> <%= p.difficulty %></p>
             <p><b><i>Description:</i></b> <%= p.description %></p>
             <p><b><i>Complete:</i></b> <%= p.complete ? 'Yes' : 'In Progress' %></p>
-            <a href="/projects/<%= p._id %>"><button>See more</button></a>
         </div>
 
     <% }) %>
