--- a/views/projects/new-project.ejs
+++ b/views/projects/new-project.ejs
@@ -1,5 +1,7 @@
 <%- include('../partials/header') %>
 
+<h1>New Project</h1>
+
 <form action="/projects/my" method="POST">
     <label>Title:</label>
     <input type="text" name="title" required>
