--- a/views/projects/update.ejs
+++ b/views/projects/update.ejs
@@ -1,5 +1,7 @@
 <%- include('../partials/header') %>
 
+<h1>Update <%= project.title %></h1>
+
 <form action="/projects/<%= project.id %>/update?_method=PUT" method="POST">
     <label>Title:</label>
     <input type="text" name="title" value="<%= project.title %>" required>
